fix: i hate bootstrap (fixes colors on collapses)

--- a/scss/_bbcode.scss
+++ b/scss/_bbcode.scss
@@ -277,3 +277,7 @@ div.indentText {
     font-size: 1.17rem;
   }
 }
+
+.card {
+  color: unset;
+}
